# bigg-cli

./: .gitignore  LICENSE  README.md  bigg-cli-0.1.0.r11.gf107633-1-any.pkg.tar.zst  pyproject.toml
.github/workflows/: ci.yml  package-drift.yml  release.yml  weekly-rebuild.yml
src/bigg_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  core.py  errors.py  types.py
tests/: test_cli.py  test_client.py  test_config.py  test_core.py  test_higher_level_core.py
