[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigg-cli"
version = "0.1.0"
description = "Command-line client for the BiGG Models API"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "BiGG CLI Maintainers" }
]
keywords = ["bigg", "metabolic-models", "bioinformatics", "cli", "api"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.urls]
Homepage = "http://bigg.ucsd.edu/"
Documentation = "http://bigg.ucsd.edu/data_access"
Source = "https://github.com/SBRG/bigg_models"

[project.scripts]
bigg = "bigg_cli.cli:run"

[dependency-groups]
dev = [
  "build>=1.2.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ARG", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_return_any = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
